[package]
name = "solana-farm-fund"
version = "0.0.1"
description = "Solana Yield Farming Fund"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
solana-program = "1.8.1"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
pyth-client = "0.2.2"

[dev-dependencies]
solana-program-test = "1.8.1"
solana-farm-client = { path = "../farm-client" }
solana-sdk = "1.8.1"
solana-cli-config = "1.8.1"
solana-logger = "1.8.1"
rand = "0.8.4"
log = "0.4.14"

[lib]
crate-type = ["cdylib", "lib"]

